@@ -19,7 +19,9 @@
 13. Slightly improve highlight in corner of kwin windows.
 14. Align pressed box drwn for checkable icon menuitems better
     with menuitem highlight.
-
+15. Remove 'Custom sunken gradient' setting, as this was not
+    actually used.
+    
 0.62.9
 ------
 1. Draw correct colour for popup of combo's in toolbars.
